--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
       <scope>test</scope>
       <version>3.8.1</version>
     </dependency>
+    <dependency>
+      <artifactId>lombok</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <version>1.18.22</version>
+    </dependency>
   </dependencies>
   <groupId>me.baobo</groupId>
   <modelVersion>4.0.0</modelVersion>
